# class-assembly

./: .gitignore  010_parse_reactions.py  020_create_setup.py  AGENTS.md  CLAUDE.md  README.md  pyproject.toml
lib/: balancer.py  exporter.py  grouper.py  loader.py  logging_setup.py  models.py  pairs.py
memory/: MEMORY.md  fat-models-preference.md  step-010-is-temporary.md
tests/: factories.py  test_assignment.py  test_balancer.py  test_group.py  test_group_assembly.py  test_loader.py  test_pairs.py  test_player.py
